refactor(Member): MemberLookupUseCase 세분화