@@ -2,11 +2,8 @@ package page.clab.api.domain.member.application;
 
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
-import page.clab.api.domain.member.application.port.in.MemberLookupUseCase;
-import page.clab.api.domain.member.application.port.out.CheckMemberExistencePort;
-import page.clab.api.domain.member.application.port.out.LoadMemberByEmailPort;
+import page.clab.api.domain.member.application.port.in.MemberInfoRetrievalUseCase;
 import page.clab.api.domain.member.application.port.out.LoadMemberPort;
-import page.clab.api.domain.member.application.port.out.RegisterMemberPort;
 import page.clab.api.domain.member.domain.Member;
 import page.clab.api.domain.member.dto.shared.MemberBasicInfoDto;
 import page.clab.api.domain.member.dto.shared.MemberBorrowerInfoDto;
@@ -15,60 +12,22 @@ import page.clab.api.domain.member.dto.shared.MemberEmailInfoDto;
 import page.clab.api.domain.member.dto.shared.MemberLoginInfoDto;
 import page.clab.api.domain.member.dto.shared.MemberPositionInfoDto;
 import page.clab.api.global.auth.util.AuthUtil;
-import page.clab.api.global.exception.NotFoundException;
 
-import java.time.LocalDateTime;
 import java.util.List;
-import java.util.Optional;
+import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
-public class MemberLookupService implements MemberLookupUseCase {
+public class MemberInfoRetrievalService implements MemberInfoRetrievalUseCase {
 
-    private final CheckMemberExistencePort checkMemberExistencePort;
     private final LoadMemberPort loadMemberPort;
-    private final LoadMemberByEmailPort LoadMemberByEmailPort;
-    private final RegisterMemberPort registerMemberPort;
-
-    @Override
-    public void ensureMemberExists(String memberId) {
-        if (!checkMemberExistencePort.existsById(memberId)) {
-            throw new NotFoundException("[Member] id: " + memberId + "에 해당하는 회원이 존재하지 않습니다.");
-        }
-    }
-
-    @Override
-    public Optional<Member> findById(String memberId) {
-        return loadMemberPort.findById(memberId);
-    }
-
-    @Override
-    public Member findByIdOrThrow(String memberId) {
-        return loadMemberPort.findByIdOrThrow(memberId);
-    }
-
-    @Override
-    public Member findByEmail(String email) {
-        return LoadMemberByEmailPort.findByEmailOrThrow(email);
-    }
-
-    @Override
-    public Member getCurrentMember() {
-        String memberId = AuthUtil.getAuthenticationInfoMemberId();
-        return loadMemberPort.findByIdOrThrow(memberId);
-    }
-
-    @Override
-    public String getCurrentMemberId() {
-        return AuthUtil.getAuthenticationInfoMemberId();
-    }
 
     @Override
     public List<MemberEmailInfoDto> getMembers() {
         List<Member> members = loadMemberPort.findAll();
         return members.stream()
                 .map(MemberEmailInfoDto::create)
-                .toList();
+                .collect(Collectors.toList());
     }
 
     @Override
@@ -76,7 +35,7 @@ public class MemberLookupService implements MemberLookupUseCase {
         return loadMemberPort.findAll()
                 .stream()
                 .map(Member::getId)
-                .toList();
+                .collect(Collectors.toList());
     }
 
     @Override
@@ -85,7 +44,7 @@ public class MemberLookupService implements MemberLookupUseCase {
                 .stream()
                 .filter(Member::isAdminRole)
                 .map(Member::getId)
-                .toList();
+                .collect(Collectors.toList());
     }
 
     @Override
@@ -94,7 +53,7 @@ public class MemberLookupService implements MemberLookupUseCase {
                 .stream()
                 .filter(Member::isSuperAdminRole)
                 .map(Member::getId)
-                .toList();
+                .collect(Collectors.toList());
     }
 
     @Override
@@ -105,7 +64,7 @@ public class MemberLookupService implements MemberLookupUseCase {
 
     @Override
     public MemberBasicInfoDto getCurrentMemberBasicInfo() {
-        String currentMemberId = getCurrentMemberId();
+        String currentMemberId = AuthUtil.getAuthenticationInfoMemberId();
         Member member = loadMemberPort.findByIdOrThrow(currentMemberId);
         return MemberBasicInfoDto.create(member);
     }
@@ -118,14 +77,14 @@ public class MemberLookupService implements MemberLookupUseCase {
 
     @Override
     public MemberDetailedInfoDto getCurrentMemberDetailedInfo() {
-        String currentMemberId = getCurrentMemberId();
+        String currentMemberId = AuthUtil.getAuthenticationInfoMemberId();
         Member member = loadMemberPort.findByIdOrThrow(currentMemberId);
         return MemberDetailedInfoDto.create(member);
     }
 
     @Override
     public MemberBorrowerInfoDto getCurrentMemberBorrowerInfo() {
-        String currentMemberId = getCurrentMemberId();
+        String currentMemberId = AuthUtil.getAuthenticationInfoMemberId();
         Member member = loadMemberPort.findByIdOrThrow(currentMemberId);
         return MemberBorrowerInfoDto.create(member);
     }
@@ -138,22 +97,8 @@ public class MemberLookupService implements MemberLookupUseCase {
 
     @Override
     public MemberPositionInfoDto getCurrentMemberPositionInfo() {
-        String currentMemberId = getCurrentMemberId();
+        String currentMemberId = AuthUtil.getAuthenticationInfoMemberId();
         Member member = loadMemberPort.findByIdOrThrow(currentMemberId);
         return MemberPositionInfoDto.create(member);
     }
-
-    public void updateLoanSuspensionDate(String memberId, LocalDateTime loanSuspensionDate) {
-        Member member = loadMemberPort.findByIdOrThrow(memberId);
-        member.updateLoanSuspensionDate(loanSuspensionDate);
-        registerMemberPort.save(member);
-    }
-
-    @Override
-    public void updateLastLoginTime(String memberId) {
-        Member member = loadMemberPort.findByIdOrThrow(memberId);
-        member.updateLastLoginTime();
-        registerMemberPort.save(member);
-    }
-
 }
